--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.1.1",
@@ -28,6 +30,7 @@
     "qrcode": "^1.5.1",
     "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.6.1",
+    "twilio": "^4.14.1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
